--- a/config/settings.yml
+++ b/config/settings.yml
@@ -153,3 +153,5 @@ fomat_time: "%H:%M"
 checkbox_value_true: "1"
 update_success: "true"
 update_fails: "false"
+delete_success: "true"
+delete_fails: "false"
